# political-compass

./: README.md  notebook.ipynb  pyproject.toml
data/: stemwijzer.csv
data/2023/: stemwijzer.csv
